Add CORS configuration with environment variables